--- a/.dockerignore
+++ b/.dockerignore
@@ -7,6 +7,7 @@
 !dependencies-apt.txt
 !dependencies-py3.*
 !launchers
+!src
 
 # YOUR FILES LISTED BELOW THIS LINE (IMPORTANT: PREPEND !)
 # ----------------------------------------------------------------------------
