--- a/src/_toc.yml
+++ b/src/_toc.yml
@@ -17,7 +17,15 @@ parts:
       chapters:
           - file: consume/1_setup/index
           - file: consume/2_instructions/index
+            sections:
+              - file: consume/2_instructions/build
+              - file: consume/2_instructions/editor
+              - file: consume/2_instructions/workbench
+              - file: consume/2_instructions/evaluate
+              - file: consume/2_instructions/submit
+
           - file: consume/3_next/index
+
     - caption: How To - Create an LX
       maxdepth: 2
       numbered: False
@@ -31,6 +39,7 @@ parts:
                 - file: create/5_develop/4_challenges
                 - file: create/5_develop/5_simulator
                 - file: create/5_develop/6_duckiebot
+
           - file: create/6_publish/index
             sections:
               - file: create/6_publish/1_test
